# JobMatch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst  jobmatch.rst  modules.rst
gui/: app_instructions.py  data_ingestion.py  gui_interface.py  gui_interface_new.py  jobmatch_app.py  load_data.py  resources_rc.py  run_jobmatch_app.py
images/: resources.qrc
jobmatch/: JobMatch.py  bipartite_graph_match.py  dataclasses.py  genetic_algorithm.py  global_functions.py  linear_program_optimization.py  preprocessing.py  stable_marriage.py  validate_assignments.py
notebooks/: faces_in_spaces.py  normalize_input_df.py  validate_assignments.py
tests/: test_algorithms.py  test_app.py  test_data_ingestion.py  test_dataclasses.py  test_genetic_algorithm.py  test_gui_interface.py  test_gui_qt.py  test_jobmatch.py  test_load_data.py  test_preprocessing.py
