[tool.poetry]
name = "jobmatch-project"
version = "0.1.0"
description = "put faces in spaces"
authors = ["speters9 <speters9@stanford.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
arrow = "^1.3.0"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pyprojroot = "^0.3.0"
networkx = "^3.3"
cookiecutter-data-science = "^2.0.0"
rapidfuzz = "^3.9.6"
matplotlib = "^3.9.2"
jedi = "0.18.2"
pulp = "^2.9.0"
openpyxl = "^3.1.5"
nameparser = "^1.1.3"
sphinx = "<8.0"
sphinx-rtd-theme = "2.0.0"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
isort = "^5.13.2"
sv-ttk = "^2.6.0"
tk = "^0.1.0"
nuitka = "^2.4.7"
tkinterdnd2 = "^0.4.2"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
